--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styles2.css">
     <link rel="shortcut icon" href="images/cas-hero-img.png" type="image/x-icon">
 </head>
 <body>
@@ -54,7 +53,6 @@
             </div>
             <div class="hero-image-wrapper">
                 <div class="hero-image-bg"></div>
-               
                 <img src="images/cas-hero-img.png" alt="James Oliver C. Llena" class="hero-image">
             </div>
         </div>
@@ -124,44 +122,72 @@
         </div>
     </section>
 
-    <section id="projects" class="projects-section">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">PROJECTS</h2>
-                <p>My recent works</p>
-            </div>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400/0f172a/7dd3fc?text=DRE+PC+Plaza" alt="DRE PC Plaza" class="project-image">
-                    <div class="project-card-body">
-                        <h3>A Capstone Project: DRE PC Plaza</h3>
-                        <div class="project-tags">
-                            <span>HTML</span><span>CSS</span><span>Javascript</span><span>React</span><span>Node.js</span><span>Express.js</span><span>MySQL</span>
-                        </div>
-                        <p>An ecommerce website for a local computer store, designed to provide a seamless shopping experience for customers. It includes features such as product browsing, shopping cart functionality, and secure checkout.</p>
-                        <div class="project-links">
-                            <a href="#">Live View <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
-                            <a href="#">View Repo <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
-                        </div>
+   <section id="projects" class="projects-section">
+    <div class="container">
+        <div class="section-header">
+            <h2 class="section-title">PROJECTS</h2>
+            <p>My recent works</p>
+        </div>
+        <div class="projects-grid">
+             <div class="project-card">
+                <img src="images/eerie.png" alt="Eerie Grid PH Application Screenshot" class="project-image">
+                <div class="project-card-body">
+                    <h3>Eerie Grid PH</h3>
+                    <div class="project-tags">
+                        <span>Node.js</span><span>Express.js</span><span>Google Gemini API</span><span>Vector Search</span><span>Supabase</span><span>Leaflet.js</span><span>Serverless Functions</span><span>HTML</span><span>CSS</span><span>JavaScript</span>
+                    </div>
+                    <p>An interactive platform for mapping and archiving Filipino horror stories. Features an AI "Archive Keeper" chatbot (Google Gemini API) for conversational story discovery, Google Cloud Text-to-Speech for narration, a user submission system, and a full admin panel for content moderation.</p>
+                    <div class="project-links">
+                        <a href="https://eerie-grid.vercel.app" target="_blank" rel="noopener noreferrer">Live View <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
+                        <a href="https://github.com/C-a-s-t-e-l/grid-vercel" target="_blank" rel="noopener noreferrer">View Repo <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
                     </div>
                 </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400/0f172a/7dd3fc?text=PortfolioS" alt="PortfolioS" class="project-image">
-                    <div class="project-card-body">
-                        <h3>PortfolioS</h3>
-                        <div class="project-tags">
-                            <span>HTML</span><span>CSS</span><span>Javascript</span>
-                        </div>
-                        <p>This project is a collaborative effort showcasing the skills and teamwork of our group. It highlights our ability to work together to design and develop a functional and visually appealing portfolio.</p>
-                        <div class="project-links">
-                            <a href="#">Live View <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
-                            <a href="#">View Repo <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
-                        </div>
+            </div>
+            <div class="project-card">
+                <img src="images/vibes.png" alt="Vibe Rooms Application Screenshot" class="project-image">
+                <div class="project-card-body">
+                    <h3>Vibe Rooms</h3>
+                    <div class="project-tags">
+                        <span>Node.js</span><span>Express.js</span><span>Socket.IO</span><span>Supabase</span><span>PostgreSQL</span><span>Passport.js</span><span>Google OAuth</span><span>JWT</span><span>HTML</span><span>CSS</span><span>JavaScript</span>
+                    </div>
+                    <p>A real-time, synchronized music listening application inspired by Filipino 'tambay' culture. Users sign in with Google, create rooms, and build a shared music queue from YouTube links. The host's playback is perfectly synced for all listeners, who can suggest tracks and interact via live chat.</p>
+                    <div class="project-links">
+                        <a href="https://vibe-rooms-five.vercel.app" target="_blank" rel="noopener noreferrer">Live View <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
+                        <a href="https://github.com/C-a-s-t-e-l/vibe-rooms" target="_blank" rel="noopener noreferrer">View Repo <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="images/pares.png" alt="Pares Tayo Website Screenshot" class="project-image">
+                <div class="project-card-body">
+                    <h3>Pares Tayo Ordering System</h3>
+                    <div class="project-tags">
+                        <span>HTML</span><span>CSS</span><span>JavaScript</span><span>html2canvas.js</span><span>Local Storage</span>
+                    </div>
+                    <p>A static e-commerce website providing a complete ordering experience for a local restaurant. Features a filterable menu, item customization modal, and a cart managed with Local Storage. The checkout process cleverly uses html2canvas to generate a downloadable receipt image for order finalization via social media.</p>
+                    <div class="project-links">
+                        <a href="https://parestayolucena.onrender.com" target="_blank" rel="noopener noreferrer">Live View <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
+                        <a href="https://github.com/C-a-s-t-e-l/parestayo" target="_blank" rel="noopener noreferrer">View Repo <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="images/cas.png" alt="Personal Portfolio Website Screenshot" class="project-image">
+                <div class="project-card-body">
+                    <h3>Personal Portfolio Website</h3>
+                    <div class="project-tags">
+                        <span>HTML</span><span>CSS</span><span>JavaScript</span><span>Intersection Observer</span>
+                    </div>
+                    <p>My personal portfolio, designed and built from scratch. This fully responsive, single-page site features a clean aesthetic with a dynamic animated background and utilizes the Intersection Observer API for smooth-scrolling navigation with active link highlighting, demonstrating core proficiency in vanilla web technologies.</p>
+                    <div class="project-links">
+                        <a href="#hero">Live View <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
+                        <a href="https://github.com/C-a-s-t-e-l/Casport-v2" target="_blank" rel="noopener noreferrer">View Repo <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg></a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <section id="contact" class="contact-section">
         <div class="container">
@@ -171,17 +197,38 @@
             </div>
             <div class="contact-content">
                 <div class="contact-info">
-                    <p>My aspiration is to inspire others through my skills in web design and development. I aim to create innovative, interactive, and user-friendly solutions by mastering both the creative and technical aspects of web development.</p>
+                    <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of your vision. Feel free to reach out using the form or through my contact details and social media below.</p>
                     <div class="contact-grid">
-                        <a href="#" class="contact-button">Contact Number</a>
-                        <a href="#" class="contact-button">Email</a>
-                        <a href="#" class="contact-button">Address</a>
-                        <a href="#" class="contact-button">Github</a>
-                        <a href="#" class="contact-button">Facebook</a>
-                        <a href="#" class="contact-button">LinkedIn</a>
+                        <button class="contact-button" data-copy="09998097001">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M2 3.5A1.5 1.5 0 013.5 2h1.148a1.5 1.5 0 011.465 1.175l.716 3.223a1.5 1.5 0 01-1.052 1.767l-.933.267c-.41.117-.643.555-.48.95a11.542 11.542 0 006.254 6.254c.395.163.833-.07.95-.48l.267-.933a1.5 1.5 0 011.767-1.052l3.223.716A1.5 1.5 0 0118 15.352V16.5a1.5 1.5 0 01-1.5 1.5h-1.5A13.5 13.5 0 012 3.5z" clip-rule="evenodd" /></svg>
+                            <span class="contact-text">09998097001</span>
+                        </button>
+                        <button class="contact-button" data-copy="ezzyllena@gmail.com">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M3 4a2 2 0 00-2 2v1.161l8.441 4.221a1.25 1.25 0 001.118 0L19 7.162V6a2 2 0 00-2-2H3z" /><path d="M19 8.839l-7.77 3.885a2.75 2.75 0 01-2.46 0L1 8.839V14a2 2 0 002 2h14a2 2 0 002-2V8.839z" /></svg>
+                            <span class="contact-text">ezzyllena@gmail.com</span>
+                        </button>
+                        <button class="contact-button" data-copy="Lucena, Quezon Province">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M9.69 18.933l.003.001C9.89 19.02 10 19 10 19s.11.02.308-.066l.002-.001.006-.003.018-.008a5.741 5.741 0 00.281-.14c.186-.1.42-.25.69-.453.27-.204.575-.458.9-.748.554-.498 1.198-1.156 1.84-1.959.643-.802 1.26-1.766 1.776-2.861a11.413 11.413 0 00-4.639-14.254l-.001-.001c-.422-.285-.92-.46-1.442-.46-.523 0-1.02.176-1.443.46-.001 0-.001.001-.001.001a11.413 11.413 0 00-4.64 14.254c.516 1.095 1.133 2.059 1.776 2.861.642.803 1.286 1.46 1.84 1.959.326.29.63.543.9.748.27.203.504.352.69.453.087.05.18.098.282.14l.018.008.006.003zM10 11.25a2.25 2.25 0 100-4.5 2.25 2.25 0 000 4.5z" clip-rule="evenodd" /></svg>
+                            <span class="contact-text">Lucena, Quezon</span>
+                        </button>
+                        <a href="https://github.com/C-a-s-t-e-l" target="_blank" rel="noopener noreferrer" class="contact-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5"><path fill-rule="evenodd" d="M10 0C4.477 0 0 4.477 0 10c0 4.418 2.865 8.165 6.839 9.489.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.031-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0110 4.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.378.203 2.398.1 2.651.64.7 1.03 1.595 1.03 2.688 0 3.848-2.338 4.695-4.566 4.942.359.308.678.92.678 1.852 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.001 10.001 0 0020 10c0-5.523-4.477-10-10-10z" clip-rule="evenodd" /></svg>
+                            <span class="contact-text">Github</span>
+                        </a>
+                        <a href="https://www.facebook.com/profile.php?id=61579492107593" target="_blank" rel="noopener noreferrer" class="contact-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M10 1.667c-4.6 0-8.333 3.733-8.333 8.333s3.733 8.333 8.333 8.333 8.333-3.733 8.333-8.333S14.6 1.667 10 1.667zM12.175 10H10.842v5H8.842v-5H7.5v-2h1.342V6.625c0-1.233.733-2.125 2.075-2.125h1.5v2h-1.017c-.383 0-.483.2-.483.5V8h1.525l-.233 2z"/></svg>
+                            <span class="contact-text">Facebook</span>
+                        </a>
+                        <a href="https://www.linkedin.com/in/cascodes" target="_blank" rel="noopener noreferrer" class="contact-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M10 1.667c-4.6 0-8.333 3.733-8.333 8.333s3.733 8.333 8.333 8.333S14.6 1.667 10 1.667zM8.333 15H6.667V9.167h1.666V15zM7.5 8.333a.833.833 0 110-1.666.833.833 0 010 1.666zM15 15h-1.667v-2.917c0-.7-.017-1.583-.975-1.583-.975 0-1.125.758-1.125 1.525V15H9.583V9.167h1.592v.725h.025c.217-.417.742-0.85 1.567-0.85 1.675 0 1.983 1.1 1.983 2.533V15z"/></svg>
+                            <span class="contact-text">LinkedIn</span>
+                        </a>
                     </div>
                 </div>
-                <form id="contact-form" class="contact-form">
+                <form id="contact-form" action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                    <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
+                    <input type="hidden" name="subject" value="New Contact Form Submission from Portfolio">
+                    <input type="hidden" name="from_name" value="CasCodes Portfolio">
                     <div class="form-group">
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="name" placeholder="e.g. James Oliver Llena" required>
@@ -198,6 +245,7 @@
                         Send Message
                         <svg xmlns="http://www.w3.org/2000/svg" class="link-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6" /></svg>
                     </button>
+                    <div id="form-result"></div>
                 </form>
             </div>
         </div>
