--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <div class="timeline-item">
                             <div class="timeline-card">
                                 <div class="timeline-header">
-                                    <h4>STI College Lucena</h4>
+                                    <h4>Lorem ipsum dolor.</h4>
                                     <span class="timeline-badge">Graduated</span>
                                 </div>
                                 <p class="timeline-date">2020 - 2025</p>
@@ -88,7 +88,7 @@
                         <div class="timeline-item">
                             <div class="timeline-card">
                                 <div class="timeline-header">
-                                    <h4>ESTI Marinduque</h4>
+                                    <h4>Lorem ipsum dolor</h4>
                                     <span class="timeline-badge">Graduated</span>
                                 </div>
                                 <p class="timeline-date">2016 - 2019</p>
