--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
             <div class="hero-text">
                 <p>Hello! I am,</p>
                 <h1>James Oliver C. Llena</h1>
-                <h2 class="gradient-text">Front-End Developer</h2>
+                <h2 class="gradient-text">Full Stack Developer</h2>
                 <p class="hero-description">
-                    My aspiration is to inspire others through my skills in web design and development. 
-                    I aim to create innovative, interactive, and user-friendly solutions by mastering 
-                    both the creative and technical aspects of web development.
+                    As a Full Stack Developer, I enjoy building web applications from start to finish. My goal is to create digital tools that are well-designed, functional, and easy for people to use. I'm driven by a passion for problem-solving and am committed to growing my skills across the entire development stack.
                 </p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Contact Me</a>
