--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="skills-group">
                         <h4 class="skills-category-title">Tech Stacks & Designs</h4>
                         <div class="skills-pills">
-                            <span class="skill-pill">HTML</span><span class="skill-pill">CSS</span><span class="skill-pill">JavaScript</span><span class="skill-pill">Bootstrap</span><span class="skill-pill">Node.js</span><span class="skill-pill">Express.js</span><span class="skill-pill">Passport.js</span><span class="skill-pill">Leaflet.js</span><span class="skill-pill">Google OAuth</span><span class="skill-pill">JSON Web Tokens</span><span class="skill-pill">Google Gemini API / Generative AI</span><span class="skill-pill">Google Cloud Text-to-Speech API</span><span class="skill-pill">RESTful API</span><span class="skill-pill">Session Mngmt</span><span class="skill-pill">Java</span><span class="skill-pill">PostgreSQL</span><span class="skill-pill">MySQL</span><span class="skill-pill">Socket.IO</span><span class="skill-pill">Database Design</span><span class="skill-pill">CRUD Ops</span>
+                            <span class="skill-pill">HTML</span><span class="skill-pill">CSS</span><span class="skill-pill">JavaScript</span><span class="skill-pill">Bootstrap</span><span class="skill-pill">Node.js</span><span class="skill-pill">Express.js</span><span class="skill-pill">Passport.js</span><span class="skill-pill">Leaflet.js</span><span class="skill-pill">Google OAuth</span><span class="skill-pill">JSON Web Tokens</span><span class="skill-pill">Google Gemini API / Generative AI</span><span class="skill-pill">Google Cloud Text-to-Speech API</span><span class="skill-pill">RESTful API</span><span class="skill-pill">Session Mngmt</span><span class="skill-pill">Java</span><span class="skill-pill">PostgreSQL</span><span class="skill-pill">MySQL</span><span class="skill-pill">Socket.IO</span><span class="skill-pill">Database Design</span><span class="skill-pill">CRUD Ops</span><span class="skill-pill">Web3forms</span>
                         </div>
                     </div>
                     <div class="skills-group">
@@ -174,7 +174,7 @@
                 <div class="project-card-body">
                     <h3>Personal Portfolio Website</h3>
                     <div class="project-tags">
-                        <span>HTML</span><span>CSS</span><span>JavaScript</span><span>Intersection Observer</span>
+                        <span>HTML</span><span>CSS</span><span>JavaScript</span><span>Web3forms</span><span>Intersection Observer</span>
                     </div>
                     <p>My personal portfolio, designed and built from scratch. This fully responsive, single-page site features a clean aesthetic with a dynamic animated background and utilizes the Intersection Observer API for smooth-scrolling navigation with active link highlighting, demonstrating core proficiency in vanilla web technologies.</p>
                     <div class="project-links">
